create and style toggle switch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <p id="current-high"></p>
                 <p id="current-low"></p>
             </div>
-            <button id="toggle">F -> C</button>
+            <label class="switch">
+                <input type="checkbox" id="toggle">
+                <span class="slider round"></span>
+            </label>
         </div>
         <div class="forecast-display container">
             <p>3-DAY FORECAST</p>
