match label for attribute to element id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form>
-        <label for="location">Search your location: </label>
+        <label for="user-location">Search your location: </label>
         <input type="text" id="user-location" name="user-location">
         <button type="button" id="submit">Submit</button>
     </form>
@@ -21,7 +21,7 @@
                 <p id="current-high"></p>
                 <p id="current-low"></p>
             </div>
-            <label class="switch">
+            <label for='toggle' class="switch">
                 <input type="checkbox" id="toggle">
                 <span class="slider round"></span>
             </label>
